--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "list-prs",
+  "name": "git-list-prs",
   "version": "0.9.0",
   "description": "List your pending PRs or PRs you need to review",
   "main": "index.js",
