--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "bin": {
-    "git-list-reviews": "./index.js"
+    "git-list-prs": "./index.js"
   },
   "engines": {
     "node": ">=8.0.0"
